actualizacion casi finalizada ADMIN

--- a/web/Doctor/IngresoEnfermedad.xhtml
+++ b/web/Doctor/IngresoEnfermedad.xhtml
@@ -152,9 +152,9 @@
 
 
                                 <h:form>
-                                    <div class="group-material">
+<!--                                    <div class="group-material">
                                         <b:inputText id="idExamen" style="font: bold small-caps 120%/200% serif;" placeholder="Código" value="#{examenBean.ingreso.idExamen}" />
-                                    </div>
+                                    </div>-->
                                     <div class="group-material">
                                         <b:inputText id="nombre" style="font: bold small-caps 120%/200% serif;" placeholder="Nombre" value="#{examenBean.ingreso.nombre}"  />
                                     </div>
