--- a/web/Doctor/Calendario.xhtml
+++ b/web/Doctor/Calendario.xhtml
@@ -56,7 +56,7 @@
                     <ul class="list-unstyled">
 
 
-                        <li><a href="../homes/homeDoctor.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
+                        <li ><a href="../homes/homeDoctor.xhtml" style="font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
                         <li>
                             <div class="dropdown-menu-button" style="font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-lamp zmdi-hc-fw"></i>&nbsp;&nbsp; Registros <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
@@ -117,7 +117,7 @@
             </div>
             <div class="container-fluid">
                 <ul class="nav nav-tabs nav-justified"  style="font-size: 17px;">
-                    <li role="presentation" class="active"><a href="">Citas del dia</a></li>
+                    <li role="presentation" class="active"  style="text-align:center;font: bold small-caps 120%/200% serif;"><h1>Citas del dia</h1></li>
 
 
                 </ul>
