--- a/web/Mantenimiento/listaExameness.xhtml
+++ b/web/Mantenimiento/listaExameness.xhtml
@@ -68,9 +68,18 @@
 
             <!-- Menu lateral-->
             <li><a href="../homes/homeMantenimiento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
-            <li><a href="faces/../RegistroAdmin.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-assignment zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Administrador</a></li>
-            <li><a href="faces/../RegistroNoExistente.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-account-add zmdi-hc-fw"></i>&nbsp;&nbsp;Registro nuevo empleado</a></li>
-            <li><a href="faces/../Mantenimiento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-alert-circle zmdi-hc-fw"></i>&nbsp;&nbsp; Mantenimiento Personal</a></li>
+            
+            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
+
+            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
+
+            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
+
+            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
+
+            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
+
+            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
             <!-- FIn del Menu lateral -->
           </ul>
         </div>
