--- a/web/Mantenimiento/Examen.xhtml
+++ b/web/Mantenimiento/Examen.xhtml
@@ -40,6 +40,8 @@
 
   </h:head>
   <h:body>
+    
+    <f:event listener="#{categoriaExamenBean.listarCategoriaExamen()}" type="preRenderView"/>
     <!-- NavBar lateral de la pagina -->
     <div class="navbar-lateral full-reset">
       <div class="visible-xs font-movile-menu mobile-menu-button"></div>
@@ -52,7 +54,7 @@
           <figure>
             <img src="../resources/imgs/imagenes_mantenimiento/worker.png" alt="Biblioteca" class="img-responsive center-box" style="width:55%;"/>
           </figure>
-          <p class="text-center" style="padding-top: 15px;">Sistema de Mantenimiento</p>
+          <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;">Usuario #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
         </div>
 
 
@@ -63,21 +65,18 @@
 
             <li><a href="../homes/homeMantenimiento.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
-            <li>
-              <div class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
-              <ul class="list-unstyled">
-                <li><a href="faces/vistaCompleta/nuevoIngresoPaciente.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Usuario</a></li>
-              </ul>
-            </li>
+            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
 
+            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
 
-            <li>
-              <div class="dropdown-menu-button"><i class="zmdi zmdi-account-add zmdi-hc-fw"></i>&nbsp;&nbsp; Mantenimiento <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
-              <ul class="list-unstyled">
-                <li><a href="faces/vistaCruds/PersonaAPaciente.xhtml"><i class="zmdi zmdi-face zmdi-hc-fw"></i>&nbsp;&nbsp; Mantenimiento Personas</a></li>
-              </ul>
-            </li>
+            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
 
+            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
+
+            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
+
+            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
+            
 
           </ul>
         </div>
@@ -98,7 +97,7 @@
             <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user-picture" class="img-responsive img-circle center-box"/>
           </figure>
           <li style="color:#fff; cursor:default;">
-            <span class="all-tittles">Admin Name</span>
+            <span class="all-tittles"> #{controlador.usu.nombre} #{controlador.usu.apellido} </span>
           </li>
           <li  class="tooltips-general exit-system-button" data-href="../homes/homeMantenimiento.xhtml" data-placement="bottom" title="Salir del sistema">
             <i class="zmdi zmdi-power"></i>
@@ -169,17 +168,21 @@
               <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <h:form>
                   <div class="group-material">
-                    <b:inputText id="Examen" style=" font: bold small-caps 120%/200% serif;" placeholder="Id:" value="#{bean_examen.exe.idExamen}" />
+                    <b:inputText id="Examen" style=" font: bold small-caps 120%/200% serif;" placeholder="Id:" value="#{bean_examen.exe.idExamen}" readonly="true"/>
                   </div>
                   <div class="group-material">
                     <b:inputText id="nombre" style=" font: bold small-caps 120%/200% serif;" placeholder="Nombre: " value="#{bean_examen.exe.nombre}"/>
                   </div>
 
                   <div class="group-material">
-                    <b:inputText id="Descripcion" style=" font: bold small-caps 120%/200% serif;" placeholder="Categoria: " value="#{bean_examen.exe.idCategoriaExamen}"/>
+                    <span>Categoria</span>
+                    <b:selectOneMenu value="#{bean_examen.exe.idCategoriaExamen}" class="tooltips-general material-control" style=" font: bold small-caps 120%/200% serif; height: 50px;" title="Seleccione Su estado civil">
+                      <f:selectItems value="#{categoriaExamenBean.lstCategoriaExamenDAO}" var="es" itemLabel="#{es.nombreCategoria}" itemValue="#{es.idCategoriaExamen}"/>
+                    </b:selectOneMenu>
                   </div>
+
                   <p class="text-center">
-                    <b:commandButton class="btn btn-primary" value="Buscar" action="#{bean_examen.insertar()}" />
+                    <b:commandButton class="btn btn-primary" value="Guardar" action="#{bean_examen.insertar()}" />
                   </p> 
                 </h:form>
 
